Add total on every column